; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_tcpip.c_closetcpip.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_tcpip.c_closetcpip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dbginterface = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dbginterface*)* @closetcpip to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @closetcpip(%struct.dbginterface* %0) #0 {
  %2 = alloca %struct.dbginterface*, align 8
  store %struct.dbginterface* %0, %struct.dbginterface** %2, align 8
  %3 = load %struct.dbginterface*, %struct.dbginterface** %2, align 8
  %4 = getelementptr inbounds %struct.dbginterface, %struct.dbginterface* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @tcpip_stoptimer(i32 %5)
  %7 = load %struct.dbginterface*, %struct.dbginterface** %2, align 8
  %8 = getelementptr inbounds %struct.dbginterface, %struct.dbginterface* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @tcpip_close(i32 %9)
  %11 = load %struct.dbginterface*, %struct.dbginterface** %2, align 8
  %12 = getelementptr inbounds %struct.dbginterface, %struct.dbginterface* %11, i32 0, i32 0
  store i32 -1, i32* %12, align 4
  ret i32 0
}

declare dso_local i32 @tcpip_stoptimer(i32) #1

declare dso_local i32 @tcpip_close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
